--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,3 +14,8 @@ spring:
         show_sql: true
         format_sql: true
         use_sql_comments: true
+
+  data:
+    redis:
+      host: localhost
+      port: 6379
