--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,3 +19,9 @@ spring:
     redis:
       host: localhost
       port: 6379
+
+
+sonar:
+  organization: dojindo
+  projectKey: dojindo_minipay-jinyoung
+  sources: .
