--- a/build.gradle
+++ b/build.gradle
@@ -43,15 +43,14 @@ sonarqube {
 	properties {
 		property "sonar.projectKey", "dojindo_minipay-jinyoung"
 		property "sonar.organization", "dojindo"
-		property "sonar.host.url", "https://sonarcloud.io"
+		property 'sonar.host.url', 'https://sonarcloud.io'
 		property 'sonar.sources', 'src'
 		property 'sonar.language', 'java'
 		property 'sonar.sourceEncoding', 'UTF-8'
-		property 'sonar.test.exclusions', jacocoExcludePatterns.join(',')
 		property 'sonar.test.inclusions', '**/*Test.java'
-		property 'sonar.java.coveragePlugin', 'jacoco'
 		property 'sonar.exclusions', '**/test/**, **/Q*.java, **/*Doc*.java, **/resources/** ,**/*Application*.java , **/*Config*.java,' +
 				'**/*Dto*.java, **/*Request*.java, **/*Response*.java ,**/*Exception*.java ,**/*ErrorCode*.java'
+		property 'sonar.java.coveragePlugin', 'jacoco'
 		property 'sonar.java.binaries', "${buildDir}/classes"
 		property 'sonar.coverage.jacoco.xmlReportPaths', "${buildDir}/reports/jacoco.xml"
 	}
