--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ jacocoTestReport {
 				files(classDirectories.files.collect {
 					fileTree(dir: it, excludes: [
 							// 측정 안하고 싶은 패턴
+							"**/global/*",
+							"**/redis/*",
 							"**/*Application*",
 							"**/*Config*",
 							"**/*Dto*",
