ci: sonarqube redis 추가

--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -25,11 +25,11 @@ jobs:
           container port: 3306
           mysql database: 'minipay'
           mysql root password: ${{ secrets.DB_PASSWORD }}
-#      - name: Setup Redis
-#        uses: shogo82148/actions-setup-redis@v1
-#        with:
-#          redis-version: "7.x"
-#        run: redis-cli ping
+      - name: Setup Redis
+        uses: shogo82148/actions-setup-redis@v1
+        with:
+          redis-version: "7.2"
+        run: redis-cli ping
 
       - name: Cache SonarCloud packages
         uses: actions/cache@v3
