--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -29,7 +29,7 @@ jobs:
         uses: shogo82148/actions-setup-redis@v1
         with:
           redis-version: "7.2"
-        run: redis-cli ping
+#        run: redis-cli ping
 
       - name: Cache SonarCloud packages
         uses: actions/cache@v3
