--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,14 @@ plugins {
 //	}
 //}
 
+sonar {
+	properties {
+		property "sonar.projectKey", "dojindo_minipay-jinyoung"
+		property "sonar.organization", "dojindo"
+		property 'sonar.host.url', 'https://sonarcloud.io'
+	}
+}
+
 group = 'com.jindo'
 version = '0.0.1-SNAPSHOT'
 
