--- a/build.gradle
+++ b/build.gradle
@@ -2,68 +2,62 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.1'
 	id 'io.spring.dependency-management' version '1.1.5'
-	// id 'jacoco'
-	 id "org.sonarqube" version "4.4.1.3373"
+	id 'jacoco'
+	id "org.sonarqube" version "4.4.1.3373"
 }
 
-//jacocoTestReport {
-//	dependsOn test
-//
-//	reports {
-//		html.required = true
-//		xml.required = true
-//
-//	}
+def Qdomains = []
+for (qPattern in '**/QA'..'**/QZ') { // qPattern = '**/QA', '**/QB', ... '*.QZ'
+	Qdomains.add(qPattern + '*')
+}
 
-//	def Qdomains = []
-//	for (qPattern in '**/QA'..'**/QZ') { // qPattern = '**/QA', '**/QB', ... '*.QZ'
-//		Qdomains.add(qPattern + '*')
-//	}
-//	afterEvaluate {
-//		classDirectories.setFrom(
-//				files(classDirectories.files.collect {
-//					fileTree(dir: it, excludes: [
-//							// 측정 안하고 싶은 패턴
-//							"**/global/*",
-//							"**/redis/*",
-//							"**/*Application*",
-//							"**/*Config*",
-//							"**/*Dto*",
-//							"**/*Request*",
-//							"**/*Response*",
-//							"**/*Interceptor*",
-//							"**/*Exception*"
-//							// Querydsl 관련 제거
-//					] + Qdomains)
-//				})
-//		)
-//	}
-//}
-//
-//// sonarCloud
-//sonar {
-//	properties {
-//		property "sonar.projectKey", "dojindo_minipay-jinyoung"
-//		property "sonar.organization", "dojindo"
-//		property 'sonar.host.url', 'https://sonarcloud.io'
-//		property 'sonar.sources', 'src'
-//		property 'sonar.language', 'java'
-//		property 'sonar.sourceEncoding', 'UTF-8'
-//		property 'sonar.test.inclusions', '**/*Test.java'
-//		property 'sonar.exclusions', '**/test/**, **/Q*.java, **/*Doc*.java, **/resources/** ,**/*Application*.java , **/*Config*.java,' +
-//				'**/*Dto*.java, **/*Request*.java, **/*Response*.java ,**/*Exception*.java ,**/*ErrorCode*.java'
-//		property 'sonar.java.coveragePlugin', 'jacoco'
-//		property 'sonar.java.binaries', "${buildDir}/classes"
-//		property 'sonar.coverage.jacoco.xmlReportPaths', "${buildDir}/reports/jacoco.xml"
-//	}
-//}
+def jacocoExcludePatterns = [
+		"**/*Application*",
+		"**/*Config*",
+		"**/*Exception*",
+		"**/*Request*",
+		"**/*Response*",
+		"**/*Dto*",
+		"**/*Interceptor*",
+		"**/*Filter*",
+		"**/*Resolver*",
+		"**/*Entity*",
+		"**/test/**",
+		"**/resources/**",
+		"**/*BaseTimeEntity"
+] + Qdomains
 
+// jacoco
+jacocoTestReport {
+	dependsOn test
+
+	reports {
+		html.required = true
+		xml.required = true
+	}
+
+	afterEvaluate {
+		classDirectories.setFrom(
+				files(classDirectories.files.collect {
+					fileTree(dir: it, excludes: jacocoExcludePatterns)
+				})
+		)
+	}
+}
+
+// sonarqube
 sonar {
 	properties {
 		property "sonar.projectKey", "dojindo_minipay-jinyoung"
 		property "sonar.organization", "dojindo"
 		property 'sonar.host.url', 'https://sonarcloud.io'
-		property "sonar.sources", "src"
+		property 'sonar.sources', 'src'
+		property 'sonar.language', 'java'
+		property 'sonar.sourceEncoding', 'UTF-8'
+		property 'sonar.test.exclusions', jacocoExcludePatterns.join(',')
+		property 'sonar.test.inclusions', '**/*Test.java'
+		property 'sonar.java.coveragePlugin', 'jacoco'
+		property 'sonar.coverage.jacoco.xmlReportPaths', "build/reports/jacoco/test/jacocoTestReport.xml"
 	}
 }
 
@@ -101,5 +95,5 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
-	 // finalizedBy jacocoTestReport
+	finalizedBy jacocoTestReport
 }
