chore: jacoco exclude patterns 수정

--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ def jacocoExcludePatterns = [
 		"**/config/**",
 		"**/exception/**",
 		"**/dto/**",
+		"**/constant/**",
 		"**/*Interceptor*",
 		"**/*Filter*",
 		"**/*Resolver*",
