chore: jacoco exclude patterns 수정

--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ def jacocoExcludePatterns = [
 		"**/config/**",
 		"**/exception/**",
 		"**/dto/**",
+		"**/*Response*",
+		"**/*Request*",
 		"**/constant/**",
 		"**/*Interceptor*",
 		"**/*Filter*",
