--- a/build.gradle
+++ b/build.gradle
@@ -90,6 +90,7 @@ sonar {
 		property 'sonar.language', 'java'
 		property 'sonar.sourceEncoding', 'UTF-8'
 		property 'sonar.test.exclusions', jacocoExcludePatterns.join(',')
+		property 'sonar.exclusions', jacocoExcludePatterns.join(',')
 		property 'sonar.test.inclusions', '**/*Test.java'
 		property 'sonar.java.coveragePlugin', 'jacoco'
 		property 'sonar.coverage.jacoco.xmlReportPaths', "build/reports/jacoco/test/jacocoTestReport.xml"
