--- a/build.gradle
+++ b/build.gradle
@@ -89,7 +89,7 @@ sonar {
 		property 'sonar.sources', 'src'
 		property 'sonar.language', 'java'
 		property 'sonar.sourceEncoding', 'UTF-8'
-		property 'sonar.test.exclusions', jacocoExcludePatterns.join(',')
+		// property 'sonar.test.exclusions', jacocoExcludePatterns.join(',')
 		property 'sonar.exclusions', jacocoExcludePatterns.join(',')
 		property 'sonar.test.inclusions', '**/*Test.java'
 		property 'sonar.java.coveragePlugin', 'jacoco'
