chore: jacoco exclude patterns에 annotation 패키지 추가

--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,7 @@ def jacocoExcludePatterns = [
 		"**/config/**",
 		"**/exception/**",
 		"**/dto/**",
+		"**/annotation/**",
 		"**/constant/**",
 		"**/*Interceptor*",
 		"**/*Filter*",
