chore: 깃 이그노어 추가 및 단순 수정

--- a/.gitignore
+++ b/.gitignore
@@ -39,4 +39,10 @@ out/
 ### Firebase Key ###
 src/main/resources/firebase/key/
 
-resources/static/index.html
+### FCM test template ###
+src/main/resources/static/fcm_test.html
+src/main/resources/static/firebase-messaging-sw.js
+
+### application configuration ###
+src/main/resources/application.yml
+src/test/resources/application-*.yml
