--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -33,6 +33,11 @@ jobs:
           redis-version: "7.2"
 #        run: redis-cli ping
 
+      - name: Decode and Setup FCM key file
+        run: |
+          mkdir -p firebase/key
+          echo "${{ secrets.FIREBASE_SERVICE_KEY_BASE64_ENCODE }}" | base64 -d > firebase/key/minipay-remainder-key.json
+
       - name: Cache SonarCloud packages
         uses: actions/cache@v3
         with:
