chore: sonarqube.yml FirebaseApp service key setup 수정

--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -54,4 +54,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          FCM_PROJECT_ID: ${{ secrets.FCM_PROJECT_ID }}
         run: ./gradlew build sonar --info
