chore: sonarqube.yml FirebaseApp service key setup 수정

--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -35,8 +35,8 @@ jobs:
 
       - name: Decode and Setup FCM key file
         run: |
-          mkdir -p firebase/key
-          echo "${{ secrets.FIREBASE_SERVICE_KEY_BASE64_ENCODE }}" | base64 -d > firebase/key/minipay-remainder-key.json
+          mkdir -p src/main/resources/firebase/key
+          echo ${{ secrets.FIREBASE_SERVICE_KEY_BASE64_ENCODE }} | base64 -d > src/main/resources/firebase/key/minipay-remainder-key.json
 
       - name: Cache SonarCloud packages
         uses: actions/cache@v3
